// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReducerAssign invalid input type 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerAssign -> ReducerObject[a] -> ReducerFunction[throwError]

Value:
{
  \\"a\\": 1,
  \\"b\\": 2
}",
  ],
]
`;

exports[`ReducerAssign invalid input type 2`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerAssign -> ReducerObject[b] -> ReducerFunction[throwError]

Value:
{
  \\"a\\": 1,
  \\"b\\": 2
}",
  ],
]
`;

exports[`ReducerFilter invalid input type 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFilter

Value:
false",
  ],
]
`;

exports[`ReducerFilter throw error on first item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFilter[0] -> ReducerFunction

Value:
1",
  ],
]
`;

exports[`ReducerFilter throw error on second item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFilter[1] -> ReducerFunction

Value:
2",
  ],
]
`;

exports[`ReducerFind invalid input type 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFind

Value:
false",
  ],
]
`;

exports[`ReducerFind throw error on first item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFind[0] -> ReducerFunction

Value:
1",
  ],
]
`;

exports[`ReducerFind throw error on second item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFind[1] -> ReducerFunction

Value:
2",
  ],
]
`;

exports[`ReducerFunction with async error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFunction

Value:
\\"input\\"",
  ],
]
`;

exports[`ReducerFunction with sync error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFunction[throwError]

Value:
\\"input\\"",
  ],
]
`;

exports[`ReducerList with errors first item has error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFunction[throwError]

Value:
\\"input\\"",
  ],
]
`;

exports[`ReducerList with errors second item has error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerList[1] -> ReducerFunction[throwError]

Value:
\\"input\\"",
  ],
]
`;

exports[`ReducerList with errors third item has error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerList[2] -> ReducerFunction

Value:
undefined",
  ],
]
`;

exports[`ReducerMap invalid input type 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerMap

Value:
false",
  ],
]
`;

exports[`ReducerMap throw error on first item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerMap[0] -> ReducerFunction

Value:
1",
  ],
]
`;

exports[`ReducerMap throw error on second item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerMap[1] -> ReducerFunction

Value:
2",
  ],
]
`;

exports[`ReducerObject with errors nested property 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerObject[b.c.d] -> ReducerFunction[throwError]

Value:
{
  \\"a\\": 1,
  \\"b\\": {
    \\"c\\": {
      \\"d\\": 1
    }
  }
}",
  ],
]
`;

exports[`ReducerObject with errors single property 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerObject[b] -> ReducerFunction[throwError]

Value:
{
  \\"a\\": 1,
  \\"b\\": 2
}",
  ],
]
`;

exports[`do not log names for anonymous functions function in ReducerList 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFunction

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`do not log names for anonymous functions function with inferred name from object property 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerObject[a] -> ReducerFunction

Value:
{
  \\"a\\": 1
}",
  ],
]
`;

exports[`do not log names for anonymous functions function with inferred name from variable 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerFunction

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces control:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
control:1 -> select[case] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces control:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
control:2 -> select[case] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces control:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
control:3 -> select[0][do] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces control:4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
control:4 -> select[1][do] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces control:5 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
control:5 -> select[2][default] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces entry:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
entry:1[before] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces entry:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
entry:2[value] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces entry:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
entry:3[after] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces entry:4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerEntity

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces entry:type-check-1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
entry:type-check-1[inputType] -> ReducerFunction[isString]

Value:
{
  \\"x\\": 1
}

Type check failed: expected \\"string\\" but received \\"object\\"",
  ],
]
`;

exports[`reducer stack traces entry:type-check-2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
entry:type-check-2[outputType] -> ReducerFunction[isString]

Value:
500

Type check failed: expected \\"string\\" but received \\"number\\"",
  ],
]
`;

exports[`reducer stack traces entry:type-check-3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
entry:type-check-3[inputType] -> schema:a.1.0[value]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces entry:type-check-4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
entry:type-check-4[outputType] -> schema:a.1.0[value]

Value:
500",
  ],
]
`;

exports[`reducer stack traces model:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
model:1[before] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces model:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
model:2[value] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces model:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
model:3[after] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces model:4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
ReducerEntity

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces request:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
request:1[value] -> ReducerList[1] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces request:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
request:2[options] -> ReducerObject[y] -> ReducerList[1] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces request:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
request:3[before] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces request:4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
request:4[after] -> ReducerFunction[throwError]

Value:
{
  \\"ok\\": true
}",
  ],
]
`;

exports[`reducer stack traces request:5 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
request:5[request] -> ReducerFunction[request-promise#request]

Request options:
{
  \\"method\\": \\"GET\\",
  \\"json\\": true,
  \\"url\\": \\"http://remote.test/source1\\"
}

Response info:
  - message: '404 - \\"not found\\"'
  - statusCode: 404
",
  ],
]
`;

exports[`reducer stack traces schema:a.1.0 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
schema:a.1.0[value]

Value:
{
  \\"foo\\": 1,
  \\"baaaaaar\\": \\"1\\"
}",
  ],
]
`;

exports[`reducer stack traces schema:with-value-prop 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
schema:with-value-prop[value] -> ReducerFunction[throwError]

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces transform:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
transform:1 -> ReducerFunction

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces transform:1 with debug.silent 1`] = `Array []`;

exports[`reducer stack traces transform:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
transform:2 -> transform:1 -> ReducerFunction

Value:
{
  \\"x\\": 1
}",
  ],
]
`;

exports[`reducer stack traces transform:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
transform:3 -> transform:2 -> transform:1 -> ReducerFunction

Value:
{
  \\"x\\": 1
}",
  ],
]
`;
